--- a/source/index_en.html
+++ b/source/index_en.html
@@ -113,6 +113,7 @@
         </tr>
         <tr>
           <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+<!--
               <tr>
                 <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                     <tr>
@@ -140,7 +141,7 @@ AND UNLOCK HI-TECH GIFTS</strong></td>
                       <td width="28" bgcolor="#ffdddd" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="28" alt="" style="display:block"/></td>
                       <td bgcolor="#ffdddd" valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                           <tr>
-                            <td valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_10.png" width="156" height="auto" alt="" style="display:block"/></td>
+                            <td valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_10_en.png" width="202" height="auto" alt="" style="display:block"/></td>
                           </tr>
                           <tr>
                             <td valign="middle" align="left" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
@@ -170,7 +171,7 @@ AND UNLOCK HI-TECH GIFTS</strong></td>
                       <td bgcolor="#ffdddd" valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                           <tr>
                             <td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
-                            <td valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_12.png" width="142" height="auto" alt="" style="display:block"/></td>
+                            <td valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_12_en.png" width="193" height="auto" alt="" style="display:block"/></td>
                           </tr>
                           <tr>
                             <td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
@@ -197,7 +198,7 @@ AND UNLOCK HI-TECH GIFTS</strong></td>
                       <td width="28" bgcolor="#ffdddd" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="28" alt="" style="display:block"/></td>
                       <td bgcolor="#ffdddd" valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                           <tr>
-                            <td valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_14.png" width="142" height="auto" alt="" style="display:block"/></td>
+                            <td valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_14_en.png" width="193" height="auto" alt="" style="display:block"/></td>
                           </tr>
                           <tr>
                             <td valign="middle" align="left" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
@@ -208,7 +209,7 @@ AND UNLOCK HI-TECH GIFTS</strong></td>
                                         <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><strong style="font-size: 18px;">Samsung S23 Ultra Smartphone</strong></td>
                                       </tr>
                                     </table></td>
-                                  <!--                                  <td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>--> 
+                                                                    <td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td> 
                                 </tr>
                               </table></td>
                           </tr>
@@ -232,7 +233,7 @@ AND UNLOCK HI-TECH GIFTS</strong></td>
                             <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                           </tr>
                           <tr>
-                            <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><a href="#" target="_blank"><img src="image/chs_box_8_vn.jpg" width="202" height="auto" alt="" style="display:block"/></a></td>
+                            <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><a href="#" target="_blank"><img src="image/chs_box_8_en.jpg" width="202" height="auto" alt="" style="display:block"/></a></td>
                           </tr>
                           <tr>
                             <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
@@ -242,12 +243,12 @@ AND UNLOCK HI-TECH GIFTS</strong></td>
                     </tr>
                   </table></td>
               </tr>
+-->
               <tr>
                 <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                     <tr>
                       <td width="56" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_3.jpg" width="56" height="auto" alt="" style="display:block"/></td>
-                      <td valign="middle" bgcolor="#db0011" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 20px; line-height: 1.2; color: #FFFFFF;"><strong>TÍCH LŨY ĐIỂM CAO NHẤT THÁNG,<br />
-                        THỎA THÍCH DU LỊCH CHÂU Á</strong></td>
+                      <td valign="middle" bgcolor="#db0011" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 20px; line-height: 1.2; color: #FFFFFF;"><strong>ACCUMULATE THE HIGHEST POINTS EACH MONTH TO WIN A LUXURY TRAVEL ADVENTURE IN ASIA</strong></td>
                       <td width="56" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_4.jpg" width="56" height="auto" alt="" style="display:block"/></td>
                     </tr>
                   </table></td>
@@ -269,11 +270,11 @@ AND UNLOCK HI-TECH GIFTS</strong></td>
                           <tr>
                             <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                 <tr>
-                                  <td width="195" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_5.jpg" width="195" height="auto" alt="" style="display:block"/></td>
+                                  <td width="195" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_5_en.png" width="195" height="auto" alt="" style="display:block"/></td>
                                   <td width="29" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="29" height="auto" alt="" style="display:block"/></td>
-                                  <td width="195" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_6.jpg" width="195" height="auto" alt="" style="display:block"/></td>
+                                  <td width="195" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_6_en.png" width="195" height="auto" alt="" style="display:block"/></td>
                                   <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="29" height="auto" alt="" style="display:block"/></td>
-                                  <td width="195" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_7.jpg" width="195" height="auto" alt="" style="display:block"/></td>
+                                  <td width="195" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_7_en.png" width="195" height="auto" alt="" style="display:block"/></td>
                                 </tr>
                                 <tr>
                                   <td align="center" valign="top" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">A luxurious five days-four nights trip to <strong style="font-size: 16px">Japan</strong> for two</td>
@@ -294,7 +295,7 @@ AND UNLOCK HI-TECH GIFTS</strong></td>
                             <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                           </tr>
                           <tr>
-                            <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><a href="#" target="_blank"><img src="image/chs_box_8_vn.jpg" width="202" height="auto" alt="" style="display:block"/></a></td>
+                            <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><a href="#" target="_blank"><img src="image/chs_box_8_en.jpg" width="202" height="auto" alt="" style="display:block"/></a></td>
                           </tr>
                           <tr>
                             <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
@@ -308,28 +309,8 @@ AND UNLOCK HI-TECH GIFTS</strong></td>
                 <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                     <tr>
                       <td width="56" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_3.jpg" width="56" height="auto" alt="" style="display:block"/></td>
-                      <td valign="middle" bgcolor="#db0011" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 20px; line-height: 1.2; color: #FFFFFF;"><strong>SAO PHẢI ĐẮN ĐO,<br />
-                      CHI TIÊU VÀ TÍCH NGAY ĐIỂM THƯỞNG</strong></td>
+                      <td valign="middle" bgcolor="#db0011" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 20px; line-height: 1.2; color: #FFFFFF;"><strong>DON’T HESITATE!<br />SPEND AND ACCUMULATE POINTS RIGHT AWAY </strong></td>
                       <td width="56" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_4.jpg" width="56" height="auto" alt="" style="display:block"/></td>
-                    </tr>
-                  </table></td>
-              </tr>
-			  <tr>
-                <td style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
-                    <tr>
-                      <td width="28" bgcolor="#ffe5e5" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
-                      <td bgcolor="#ffe5e5" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
-                          <tr>
-                            <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
-                          </tr>
-                          <tr>
-                            <td align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;"><strong>Chương trình áp dụng cho:</strong> Thẻ Tín Dụng HSBC TravelOne | Thẻ Tín Dụng HSBC Visa Bạch Kim Cash Back | Thẻ Tín Dụng HSBC Visa Bạch Kim Online | Thẻ Tín Dụng HSBC Visa Chuẩn LiveFree | Tài Khoản Vãng Lai HSBC | Tài Khoản An Lợi HSBC | Ứng dụng HBSC Việt Nam</td>
-                          </tr>
-                          <tr>
-                            <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
-                          </tr>
-                        </table></td>
-                      <td width="28" bgcolor="#ffe5e5" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                     </tr>
                   </table></td>
               </tr>
