--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -113,6 +113,7 @@
         </tr>
         <tr>
           <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+<!--
               <tr>
                 <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                     <tr>
@@ -209,7 +210,7 @@
                                           thời thượng</td>
                                       </tr>
                                     </table></td>
-                                  <!--                                  <td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>--> 
+                                                                    <td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td> 
                                 </tr>
                               </table></td>
                           </tr>
@@ -227,7 +228,7 @@
                             <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                           </tr>
                           <tr>
-                            <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 18px; line-height: 1.3; color: #000000;">Thời gian áp dụng: <strong style="color: #db0011;">10/11 – 29/2/2024</strong></td>
+                            <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 18px; line-height: 1.3; color: #000000;">Thời gian áp dụng: <strong style="color: #db0011;">10/11 - 29/2/2024</strong></td>
                           </tr>
                           <tr>
                             <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
@@ -243,6 +244,7 @@
                     </tr>
                   </table></td>
               </tr>
+-->
               <tr>
                 <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                     <tr>
@@ -270,11 +272,11 @@
                           <tr>
                             <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                 <tr>
-                                  <td width="195" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_5.jpg" width="195" height="auto" alt="" style="display:block"/></td>
+                                  <td width="195" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_5_vi.png" width="195" height="auto" alt="" style="display:block"/></td>
                                   <td width="29" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="29" height="auto" alt="" style="display:block"/></td>
-                                  <td width="195" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_6.jpg" width="195" height="auto" alt="" style="display:block"/></td>
+                                  <td width="195" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_6_vi.png" width="195" height="auto" alt="" style="display:block"/></td>
                                   <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="29" height="auto" alt="" style="display:block"/></td>
-                                  <td width="195" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_7.jpg" width="195" height="auto" alt="" style="display:block"/></td>
+                                  <td width="195" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_7_vi.png" width="195" height="auto" alt="" style="display:block"/></td>
                                 </tr>
                                 <tr>
                                   <td align="center" valign="top" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">Tận hưởng chuyến đi <strong style="font-size: 16px">Nhật Bản</strong> sang trọng trong 5 ngày 4 đêm, cho 2 người</td>
@@ -309,28 +311,8 @@
                 <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                     <tr>
                       <td width="56" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_3.jpg" width="56" height="auto" alt="" style="display:block"/></td>
-                      <td valign="middle" bgcolor="#db0011" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 20px; line-height: 1.2; color: #FFFFFF;"><strong>DON’T HESITATE!<br />
-SPEND AND ACCUMULATE POINTS RIGHT AWAY</strong></td>
+                      <td valign="middle" bgcolor="#db0011" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 20px; line-height: 1.2; color: #FFFFFF;"><strong>SAO PHẢI ĐẮN ĐO,<br />CHI TIÊU VÀ TÍCH NGAY ĐIỂM THƯỞNG</strong></td>
                       <td width="56" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_4.jpg" width="56" height="auto" alt="" style="display:block"/></td>
-                    </tr>
-                  </table></td>
-              </tr>
-              <tr>
-                <td style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
-                    <tr>
-                      <td width="28" bgcolor="#ffe5e5" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
-                      <td bgcolor="#ffe5e5" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
-                          <tr>
-                            <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
-                          </tr>
-                          <tr>
-                            <td align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;"><strong>Chương trình áp dụng cho:</strong> Thẻ Tín Dụng HSBC TravelOne | Thẻ Tín Dụng HSBC Visa Bạch Kim Cash Back | Thẻ Tín Dụng HSBC Visa Bạch Kim Online | Thẻ Tín Dụng HSBC Visa Chuẩn LiveFree | Tài Khoản Vãng Lai HSBC | Tài Khoản An Lợi HSBC | Ứng dụng HBSC Việt Nam</td>
-                          </tr>
-                          <tr>
-                            <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
-                          </tr>
-                        </table></td>
-                      <td width="28" bgcolor="#ffe5e5" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                     </tr>
                   </table></td>
               </tr>
