--- a/source/index_en.html
+++ b/source/index_en.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<div style="display: none; font-size:1px; color: #FFFFFF; line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">A points-accumulating program with countless exciting rewards will spice up your festive season</div>
+<div style="display: none; font-size:1px; color: #FFFFFF; line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">Spend and earn points to receive various valuable gifts from HSBC this festive season</div>
 <table width="700" border="0" cellpadding="0" cellspacing="0" class="chs_body" style="margin: 0 auto; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">
   <tr>
     <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><!--START HEADER VI -->
@@ -89,7 +89,7 @@
                       <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                     </tr>
                     <tr>
-                      <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">You know what&rsquo;s truly worth it! So why not let HSBC this spice up this festive season for you and your loved ones? Every time you spend, you will earn points and receive various valuable gifts from HSBC!</td>
+                      <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">You know what&rsquo;s truly worth it! So why not let HSBC spice up this festive season for you and your loved ones? Every time you spend, you will earn points and receive various valuable gifts from HSBC!</td>
                     </tr>
                     <tr>
                       <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
@@ -98,7 +98,7 @@
                       <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                           <tr>
                             <td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_1.jpg" width="28" height="auto" alt="" style="display:block"/></td>
-                            <td bgcolor="#db0011" valign="middle" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #FFFFFF;">To participate in the program, simply send a text message<br />using the following format: <strong style="font-size: 18px">HSBC_KM</strong> to <strong style="font-size: 18px">6067</strong></td>
+                            <td bgcolor="#db0011" valign="middle" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #FFFFFF;">Join now by sending SMS with syntax <strong style="font-size: 18px">HSBC_KM</strong> to <strong style="font-size: 18px">6067</strong></td>
                             <td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_2.jpg" width="28" height="auto" alt="" style="display:block"/></td>
                           </tr>
                         </table></td>
@@ -262,7 +262,7 @@ AND UNLOCK HI-TECH GIFTS</strong></td>
                             <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                           </tr>
                           <tr>
-                            <td align="center" style="margin: 0; padding: 0 28px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 18px; line-height: 1.3; color: #000000;">Receive a deluxe trip for two to Japan, Singapore - Malaysia or Thailand as one of the <strong style="color: #db0011;">highest points accumulators each month</strong></td>
+                            <td align="center" style="margin: 0; padding: 0 28px; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 18px; line-height: 1.3; color: #000000;">Receive a deluxe trip for two to Japan, Singapore-Malaysia and Thailand as one of the <strong style="color: #db0011;">highest points accumulators each month</strong></td>
                           </tr>
                           <tr>
                             <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
@@ -277,11 +277,11 @@ AND UNLOCK HI-TECH GIFTS</strong></td>
                                   <td width="195" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_7_en.png" width="195" height="auto" alt="" style="display:block"/></td>
                                 </tr>
                                 <tr>
-                                  <td align="center" valign="top" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">A luxurious five days-four nights trip to <strong style="font-size: 16px">Japan</strong> for two</td>
+                                  <td align="center" valign="top" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">A luxurious five-day four-night trip to <strong style="font-size: 16px">Japan</strong> for two</td>
                                   <td style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">&nbsp;</td>
-                                  <td align="center" valign="top" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">An epic five days-four nights trip to <strong style="font-size: 16px">Singapore and Malaysia</strong> journey for two</td>
+                                  <td align="center" valign="top" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">An epic five-day four-night trip to <strong style="font-size: 16px">Singapore and Malaysia</strong> journey for two</td>
                                   <td style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">&nbsp;</td>
-                                  <td align="center" valign="top" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">A wonderful five days-four nights adventure in <strong style="font-size: 16px">Thailand</strong> for two</td>
+                                  <td align="center" valign="top" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">A wonderful five-day four-night adventure in <strong style="font-size: 16px">Thailand</strong> for two</td>
                                 </tr>
                               </table></td>
                           </tr>
@@ -384,14 +384,14 @@ AND UNLOCK HI-TECH GIFTS</strong></td>
                                             <tr>
                                               <td width="49%" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                                   <tr>
-                                                    <td width="40" valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_22.png" width="29" height="auto" alt="" style="display:block"/></td>
+                                                    <td width="40" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_22.png" width="29" height="auto" alt="" style="display:block"/></td>
                                                     <td valign="middle" style="margin: 0; padding: 0 10px 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">For every <strong>VND 1 million</strong> spent internationally using your HSBC Card;</td>
                                                   </tr>
                                                 </table></td>
                                               <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">&nbsp;</td>
                                               <td width="49%" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                                   <tr>
-                                                    <td width="40" valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_25.png" width="27" height="auto" alt="" style="display:block"/></td>
+                                                    <td width="40" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_25.png" width="27" height="auto" alt="" style="display:block"/></td>
                                                     <td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">For each instalment payment on the HSBC Vietnam App;</td>
                                                   </tr>
                                                 </table></td>
@@ -403,11 +403,11 @@ AND UNLOCK HI-TECH GIFTS</strong></td>
                                             <tr>
                                               <td width="49%" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                                   <tr>
-                                                    <td width="40" valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_23.png" width="29" height="auto" alt="" style="display:block"/></td>
+                                                    <td width="40" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_23.png" width="29" height="auto" alt="" style="display:block"/></td>
                                                     <td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">When activating the HSBC Vietnam App;</td>
                                                   </tr>
                                                   <tr>
-                                                    <td valign="middle" align="left" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_24.png" width="32" height="auto" alt="" style="display:block"/></td>
+                                                    <td valign="top" align="left" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_24.png" width="32" height="auto" alt="" style="display:block"/></td>
                                                     <td valign="middle" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">When activating your Card on the HSBC Vietnam App;</td>
                                                   </tr>
                                                 </table></td>
@@ -456,15 +456,15 @@ AND UNLOCK HI-TECH GIFTS</strong></td>
                                             <tr>
                                               <td width="49%" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                                   <tr>
-                                                    <td width="45" valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_27.png" width="35" height="auto" alt="" style="display:block"/></td>
-                                                    <td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">When making eligible transactions within each month, based on your Card type;</td>
+                                                    <td width="45" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_27.png" width="35" height="auto" alt="" style="display:block"/></td>
+                                                    <td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">When achieving total Eligible Spending per Month, from VND &lt;amount&gt;</td>
                                                   </tr>
                                                 </table></td>
                                               <td valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">&nbsp;</td>
                                               <td width="49%" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                                   <tr>
-                                                    <td width="45" valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_28.png" width="38" height="auto" alt="" style="display:block"/></td>
-                                                    <td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">When opening an account and making your first salary transfer to your HSBC Account, from VND 6 million.</td>
+                                                    <td width="45" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_28.png" width="38" height="auto" alt="" style="display:block"/></td>
+                                                    <td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">When opening payroll  account and making your first salary transfer to your HSBC Account, from VND 6 million</td>
                                                   </tr>
                                                 </table></td>
                                             </tr>
