--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -349,7 +349,7 @@
 										<tr>
 											<td valign="top" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 												<tr>
-													<td width="40" valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_21.png" width="29" height="auto" alt="" style="display:block"/></td>
+													<td width="40" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_21.png" width="29" height="auto" alt="" style="display:block"/></td>
 													<td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">Với mỗi <strong>1 triệu VND</strong><br />
 												    thanh toán nội địa qua Thẻ HSBC</td>
 												</tr>
@@ -387,14 +387,14 @@
 												<tr>
 													<td width="49%" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 														<tr>
-															<td width="40" valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_22.png" width="29" height="auto" alt="" style="display:block"/></td>
+															<td width="40" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_22.png" width="29" height="auto" alt="" style="display:block"/></td>
 															<td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">Với mỗi <strong>1 triệu VND</strong> thanh toán quốc tế qua Thẻ HSBC</td>
 														</tr>
 														</table></td>
 													<td valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">&nbsp;</td>
 													<td width="49%" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 														<tr>
-															<td width="40" valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_25.png" width="27" height="auto" alt="" style="display:block"/></td>
+															<td width="40" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_25.png" width="27" height="auto" alt="" style="display:block"/></td>
 															<td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">Mỗi lần trả góp trên Ứng dụng HSBC Việt Nam</td>
 														</tr>
 														</table></td>
@@ -406,11 +406,11 @@
 												<tr>
 													<td width="49%" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 														<tr>
-															<td width="40" valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_23.png" width="29" height="auto" alt="" style="display:block"/></td>
+															<td width="40" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_23.png" width="29" height="auto" alt="" style="display:block"/></td>
 															<td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">Kích hoạt Ứng dụng HSBC Việt Nam</td>
 														</tr>
 														<tr>
-															<td valign="middle" align="left" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_24.png" width="32" height="auto" alt="" style="display:block"/></td>
+															<td valign="top" align="left" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_24.png" width="32" height="auto" alt="" style="display:block"/></td>
 															<td valign="middle" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">Kích hoạt Thẻ trên Ứng dụng HSBC Việt Nam</td>
 														</tr>
 														</table></td>
@@ -459,14 +459,14 @@
 												<tr>
 													<td width="49%" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 														<tr>
-														  <td width="45" valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_27.png" width="35" height="auto" alt="" style="display:block"/></td>
-															<td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">Đạt mức Giao dịch hợp lệ trong mỗi tháng tùy theo từng loại Thẻ</td>
+														  <td width="45" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_27.png" width="35" height="auto" alt="" style="display:block"/></td>
+															<td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">Đạt mức Giao dịch hợp lệ trong mỗi tháng từ &lt;amount&gt; VND</td>
 														</tr>
 														</table></td>
 													<td valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">&nbsp;</td>
 													<td width="49%" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
 														<tr>
-															<td width="45" valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_28.png" width="38" height="auto" alt="" style="display:block"/></td>
+															<td width="45" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_28.png" width="38" height="auto" alt="" style="display:block"/></td>
 															<td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">Mở tài khoản và chuyển lương lần đầu vào Tài Khoản HSBC từ 6 triệu VND</td>
 														</tr>
 														</table></td>
