--- a/source/index_en.html
+++ b/source/index_en.html
@@ -295,7 +295,7 @@ AND UNLOCK HI-TECH GIFTS</strong></td>
                             <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                           </tr>
                           <tr>
-                            <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><a href="#" target="_blank"><img src="image/chs_box_8_en.jpg" width="202" height="auto" alt="" style="display:block"/></a></td>
+                            <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><a href="image/TnC_EN.pdf" target="_blank"><img src="image/chs_box_8_en.jpg" width="202" height="auto" alt="" style="display:block"/></a></td>
                           </tr>
                           <tr>
                             <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
