--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -496,6 +496,18 @@
                           <tr>
                             <td align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><sup style="font-size: 12px;">(*)</sup>Điều khoản và điều kiện áp dụng</td>
                           </tr>
+						  <tr>
+                            <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
+                          </tr>
+						  <tr>
+							  <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+								  <tr>
+									<td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_1.jpg" width="28" height="70" alt="" style="display:block"/></td>
+									<td bgcolor="#db0011" valign="middle" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #FFFFFF;">Đừng bỏ lỡ ưu đãi 11/11 độc quyền <strong>350.000 VND</strong> tại Shopee<br />dành riêng cho Chủ Thẻ Tín Dụng HSBC. <a href="https://card.apply.hsbc.com.vn/uu-dai-moi-ngay/mua-sam/vn" target="_blank" style="text-decoration: underline; color: #FFFFFF;">Khám phá ngay!</a></td>
+									<td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_2.jpg" width="28" height="70" alt="" style="display:block"/></td>
+								  </tr>
+								</table></td>
+							</tr>
                         </table></td>
                       <td width="28" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                     </tr>
